test_output_new.log
Build profile: -w ghc-9.14.1 -O1
In order, the following will be built (use -v for more details):
 - azimuth-0.1.0 (lib) (file src/Azimuth/Telemetry.hs changed)
 - azimuth-0.1.0 (test:azimuth-test) (dependency rebuilt)
Preprocessing library for azimuth-0.1.0...
Building library for azimuth-0.1.0...
[1 of 2] Compiling Azimuth.Telemetry ( src/Azimuth/Telemetry.hs, dist-newstyle/build/x86_64-linux/ghc-9.14.1/azimuth-0.1.0/build/Azimuth/Telemetry.o, dist-newstyle/build/x86_64-linux/ghc-9.14.1/azimuth-0.1.0/build/Azimuth/Telemetry.dyn_o ) [Source file changed]
src/Azimuth/Telemetry.hs:183:13: error: [GHC-83865]
    • Couldn't match expected type: (a0 -> m0 a0)
                                    -> Metric -> IO Metric
                  with actual type: IO ()
    • The function ‘modifyMVar_’ is applied to three visible arguments,
        but its type ‘MVar a -> (a -> IO a) -> IO ()’ has only two
      In the first argument of ‘($)’, namely
        ‘modifyMVar_ existingValueRef (\ _ -> return initialValue) return’
      In the expression:
        modifyMVar_ existingValueRef (\ _ -> return initialValue) return
          $ Metric name existingValueRef unit
    |
183 |             modifyMVar_ existingValueRef (\_ -> return initialValue)
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

Error: [Cabal-7125]
Failed to build azimuth-0.1.0 (which is required by test:azimuth-test from azimuth-0.1.0).

